deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground-deployement
  namespace: dev 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
      - name: wil-playground-container
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
