service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-service
  namespace: dev
spec:
  selector:
    app: wil-playground
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 8888
  type: NodePort # to connect from outside the cluster
