ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-playground-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: wil.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wil-playground-service
                port:
                  number: 9999
